base/banking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-service
  namespace: default
spec:
  selector:
    app: banking-app
  ports:
    - name: banking-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
