base/banking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-deployment
  namespace: default 
  annotations: 
    kubernetes.io/change-cause: "Updating from V1:v2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-app
  template:
    metadata:
      name: banking
      labels: 
        env: prod
        app: banking-app
        app.kubernetes.io/name: banking-app
    spec:
      containers:
        - name: banking-app
          image: lostud.azurecr.io/banking:latest
          ports:
            - containerPort: 80
              name: http-banking
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: banking-service
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: banking-app
  ports:
    - name: banking-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
