base/bankingapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankingapi-deployment
  namespace: default 
  annotations: 
    kubernetes.io/change-cause: "Updating from V1:v2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankingapi-app
  template:
    metadata:
      name: bankingapi
      labels: 
        env: prod
        app: bankingapi-app
        app.kubernetes.io/name: bankingapi-app
    spec:
      containers:
        - name: bankingapi-app
          image: lostud.azurecr.io/banking-api:TAG
          ports:
            - containerPort: 80
              name: http-bankapi
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bankingapi-service
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: bankingapi-app
  ports:
    - name: bankingapi-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
