base/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-deployment
  namespace: default 
  annotations: 
    kubernetes.io/change-cause: "Adding SQL container"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql
  template:
    metadata:
      labels: 
        app: sql
    spec:
      containers:
        - name: sql
          image: mysql:latest
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.1"
            limits:
              memory: "512Mi"
              cpu: "0.5"
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: default
spec:
  selector:
    app: sql  # Match the labels of the pods
  ports:
    - name: mysql-port
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
