base/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: external-gateway
  namespace: aks-istio-ingress 
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: banking-virtual-service
  namespace: aks-istio-ingress 
spec:
  hosts:
  - "*"
  gateways:
  - external-gateway
  http:
  - match:
    - uri:
        regex: /(?i)banking.*
    route:
    - destination:
        host: banking-service.default.svc.cluster.local
        port:
          number: 80
        subset: stable
      weight: 50  # 90% of the traffic goes to the stable version
    - destination:
        host: banking-service.default.svc.cluster.local
        port:
          number: 80
        subset: canary
      weight: 50  # 10% of the traffic goes to the canary version
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: banking-destination-rule
  namespace: default  # Ensure this matches the namespace of your service
spec:
  host: banking-service.default.svc.cluster.local
  subsets:
  - name: stable
    labels:
      version: stable  # Must match the labels in your deployment for the stable version
  - name: canary
    labels:
      version: canary  # Must match the labels in your deployment for the canary version
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtual-service
  namespace: aks-istio-ingress
spec:
  hosts:
  - "*"
  gateways:
  - external-gateway
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
